--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.11",
-    "astro-icon": "^1.1.0",
     "prettier-plugin-astro": "^0.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.1.108",
+    "astro-icon": "^1.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12"
   }
