--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.108",
+    "@tailwindcss/typography": "^0.5.10",
     "astro-icon": "^1.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12"
