--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "useTabs": false,
   "plugins": [
     "prettier-plugin-astro",
-    // "prettier-plugin-tailwindcss"
+    "prettier-plugin-tailwindcss"
   ],
 }
