--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.5",
     "astro-navbar": "^2.3.1",
+    "astro-robots-txt": "^1.0.0",
     "prettier-plugin-astro": "^0.13.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
