--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,13 +1,13 @@
 # TODO: use this instead of consts.ts
 site:
-  title: 'NVD Astro Starterkit';
-  description: 'This is the default description of this website. Nice!';
-  url: 'https://example.com/';
-  UTM_SOURCE: slugify(SITE_TITLE);
-  DEFAULT_IMAGE: '/blog-placeholder-1.jpg';
+  title: "NVD Astro Starterkit"
+  description: "This is the default description of this website. Nice!"
+  url: "https://example.com/"
+  UTM_SOURCE: slugify(SITE_TITLE)
+  DEFAULT_IMAGE: "/blog-placeholder-1.jpg"
 
 ui:
-  theme: 'system' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
+  theme: "system" # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
 
   analytics:
   vendors:
@@ -18,7 +18,7 @@ ui:
 metadata:
   title:
     default: AstroWind
-    template: '%s — AstroWind'
+    template: "%s — AstroWind"
   description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
   robots:
     index: true
@@ -26,15 +26,16 @@ metadata:
   openGraph:
     site_name: AstroWind
     images:
-      - url: '~/assets/images/default.png'
+      - url: "~/assets/images/default.png"
         width: 1200
         height: 628
     type: website
   twitter:
-    handle: '@onwidget'
-    site: '@onwidget'
+    handle: "@onwidget"
+    site: "@onwidget"
     cardType: summary_large_image
 
 i18n:
   language: en
   textDirection: ltr
+
