--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       "@layouts/*": [
         "src/layouts/*"
       ],
+      "@src/*": [
+        "src/*"
+      ],
       "@components/*": [
         "src/components/*"
       ],
